--- a/css/custom.css
+++ b/css/custom.css
@@ -21,3 +21,7 @@ hr.hr-text::before{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+/* Custom style for changing separator  */
+.breadcrumb-item + .breadcrumb-item::before {
+    content: ">";
+}
