--- a/css/custom.css
+++ b/css/custom.css
@@ -25,3 +25,6 @@ hr.hr-text::before{
 .breadcrumb-item + .breadcrumb-item::before {
     content: ">";
 }
+.mt-n1 {
+    margin-top: -1 !important;
+  }
